--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -393,6 +393,10 @@ img {
   background-color: black;
 }
 
+.betLimitInfo {
+  height: 120px;
+}
+
 .video-box .video {
   width: 100%;
   height: 100%;
