//確認和取消鈕新增動提示是

--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -897,6 +897,10 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
 }
 
+#betConfirm, #cancleBet {
+  opacity: 0;
+}
+
 .gameResult {
   top: 28%;
   left: 0;
