--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -305,6 +305,9 @@
   .header {
     background-image: none;
   }
+  .announcement-container{
+    top:45%;
+  }
   .container-waps {
     height: auto;
   }
@@ -644,9 +647,18 @@
     @include tieNumberPosition(-700, 0, 0.2);
   }
 }
+@media screen and (max-width: 1024px) and (max-height: 600px){
+  .announcement-container{
+    top:54%;
+    height:500px;
+  }
+}
 @media screen and (max-width: 768px) {
   .header {
     height: 40px;
+  }
+  .announcement-container{
+    width:600px;
   }
   .video-box {
     height: 430px;
@@ -922,6 +934,10 @@
 @media screen and (max-width: 540px) {
   .header {
     height: 30px;
+  }
+  .announcement-container{
+    width:500px;
+    top:52%;
   }
   .header-btn {
     font-size: 100%;
@@ -1205,6 +1221,10 @@
     top: 25%;
     font-size: 40%;
   }
+  .announcement-container{
+    width:390px;
+    top:51%;
+  }
   .table-img {
     width: 100px;
     height: 100px;
@@ -1331,6 +1351,10 @@
   .video-box {
     height: 210px;
   }
+  .announcement-container{
+    width:350px;
+    top:55%;
+  }
   .tableItem {
     padding: 5px !important;
     width: 335px;
@@ -1439,6 +1463,18 @@
 @media screen and (max-width: 320px) {
   .header {
     height: 30px;
+  }
+  .announcement-container{
+    width:300px;
+    top:65%;
+    h1{
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+    h3{
+      font-size: 1.2rem;
+      font-weight: 600;
+    }
   }
   .tableItem {
     flex-direction: column;
@@ -1607,6 +1643,11 @@
 @media screen and (max-width: 280px) {
   .tableItem{
     width:230px;
+  }
+  .announcement-container{
+    width:250px;
+    height:653px;
+    top:65%;
   }
   .header {
     height: 50px;
