--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -411,21 +411,22 @@ img {
           transform: translate(-50%, -50%);
 }
 
+.form-group input {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-right: 1rem;
+}
+
+.form-group .form-check-label {
+  font-weight: 600;
+  letter-spacing: 0.2rem;
+  font-size: 1.5rem;
+}
+
 .announcement-fotter div {
   width: 40%;
   margin-left: auto;
   margin-right: auto;
-}
-
-.announcement-fotter input {
-  width: 1rem;
-  height: 1rem;
-  margin-right: 1rem;
-}
-
-.announcement-fotter .form-check-label {
-  font-weight: 600;
-  letter-spacing: 0.2rem;
 }
 
 .announcementTitle {
