--- a/src/assets/css/scss/components/_announcement.scss
+++ b/src/assets/css/scss/components/_announcement.scss
@@ -14,20 +14,23 @@
     left:50%;
     transform: translate(-50%,-50%);
 }
-.announcement-fotter{
-    div{
-        width:40%;
-        margin-left: auto;
-        margin-right: auto;
-    }
+.form-group{
     input{
-        width:1rem;
-        height:1rem;
+        width:1.5rem;
+        height:1.5rem;
         margin-right: 1rem;
     }
     .form-check-label{
         font-weight: 600;
         letter-spacing: 0.2rem;
+        font-size: 1.5rem;
+    }
+}
+.announcement-fotter{
+    div{
+        width:40%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 .announcementTitle{
