//更新每桌注區所有玩家的下注值

--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -84,13 +84,13 @@ img {
   border-radius: 5px;
 }
 
-.tableList {
-  height: 95%;
-}
-
 .table-img {
   width: 250px;
   height: 250px;
+}
+
+.chooseTable {
+  margin-top: 50px;
 }
 
 /*-------------------------------------------
