--- a/src/assets/css/scss/layout/_home.scss
+++ b/src/assets/css/scss/layout/_home.scss
@@ -5,9 +5,15 @@
     // text-align: right;
 }
 .tableList{
-    height:95%;
+    // height:95%;
 }
 .table-img{
     width:250px;
     height:250px;
+}
+.chooseTable{
+    margin-top: 50px;
+    // top:10%;
+    // left:50%;
+    // transform: translateX(-50%);
 }
