--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -99,6 +99,7 @@ img {
 #wap {
   float: left;
   width: 100%;
+  overflow: hidden;
 }
 
 .home {
@@ -2226,6 +2227,18 @@ a.btn.disabled, fieldset[disabled] a.btn {
 @media screen and (max-width: 1024px) {
   .header {
     background-image: none;
+  }
+  .betError {
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+  #betConfirm, #cancleBet {
+    position: absolute;
+    width: 100px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
   }
   .announcement-container {
     top: 45%;
