--- a/src/assets/css/scss/components/_announcement.scss
+++ b/src/assets/css/scss/components/_announcement.scss
@@ -1,4 +1,3 @@
-
 .announcement-bg{
     background-color: black;
     top:0;
@@ -24,7 +23,11 @@
         font-weight: 600;
         letter-spacing: 0.2rem;
         font-size: 1.5rem;
+        cursor: pointer;
     }
+}
+.announcement3Img{
+    width:643px;
 }
 .announcement-fotter{
     div{
@@ -48,6 +51,7 @@
 #announcement2{
     .announcementContent{
         text-indent:0rem;
+        font-weight: 600;
     }
 }
 
