--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -1382,7 +1382,7 @@
     font-size: 0.5rem;
     font-weight: bolder;
   }
-  .betStatus,.table-total-betStatus{
+  .table-total-betStatus{
     font-size: 0.3rem;
   }
   .betRatioText {
